--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,15 @@ description = ""
 authors = ["Robert Meissner <robert.meissner@codecentric.de>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.10,<3.11"
 textract = "^1.6.5"
 jupyter = "^1.0.0"
 requests = "^2.28.0"
 pdfminer = "^20191125"
 spacy = "^3.3.1"
+keras = "^2.9.0"
+tensorflow = "^2.9.1"
+nltk = "^3.7"
 
 [tool.poetry.dev-dependencies]
 
